--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,20 @@
 <html>
   <head>
     <title><%= title %></title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel='stylesheet' href='/stylesheets/cirrus.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div id="splash-img" class="hero fullscreen hero-img parallax-img">
+      <div class="hero-body">
+          <div class="content text-center">
+              <h3 class="uppercase white title"><%= title %></h3>
+              <h5 class="uppercase white sub-title faded">Simple passwords are a thing of the past.</h5>
+          </div>
+      </div>
+    </div>
   </body>
 </html>
