--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,18 @@
     <div id="splash-img" class="hero fullscreen hero-img parallax-img">
       <div class="hero-body">
           <div class="content text-center">
-              <h3 class="uppercase white title"><%= title %></h3>
-              <h5 class="uppercase white sub-title faded">Simple passwords are a thing of the past.</h5>
+              <h3 class="uppercase title"><%= title %></h3>
+              <h5 class="uppercase sub-title faded">Simple passwords are a thing of the past.</h5>
           </div>
       </div>
     </div>
+    <space class='x-large'></space>
+
+      <div class='content'>
+        <div class="row text-center">
+          <h3>Lorem ipsum</h3>
+          <p>Lorem Ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+        </div>
+      </div>
   </body>
 </html>
