--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,16 +14,24 @@
           <div class="content text-center">
               <h3 class="uppercase title"><%= title %></h3>
               <h5 class="uppercase sub-title faded">Simple passwords are a thing of the past.</h5>
+              <space></space>
+              <button class="btn-outline-dark center">Generate <i class="fa fa-chevron-right pad-left"></i></button>
           </div>
       </div>
     </div>
     <space class='x-large'></space>
-
-      <div class='content'>
-        <div class="row text-center">
-          <h3>Lorem ipsum</h3>
-          <p>Lorem Ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-        </div>
+    <div class='content'>
+      <div class="row text-center">
+        <h3>Lorem ipsum</h3>
+        <p>Lorem Ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
       </div>
+    </div>
+    
+    <div class='content'>
+      <div class='divider'></div>
+    </div>
+    <script src='javascripts/app.js'></script>
+    <script src='javascripts/classie.js'></script>
+    <script src="https://use.fontawesome.com/a696b91557.js"></script>
   </body>
 </html>
