--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,9 @@ body {
 }
 
 .hero {
-    background: #9eff98;
+  background: #11998e;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
 }
 
 .hero:after {
@@ -25,13 +27,11 @@ button.btn-outline-dark {
   color: #404040;
   background: 0 0;
   transition: all .3s;
-  border: 1px solid #414141;
+  border: 1px solid #0000002b;
+  box-sizing: border-box;
   backface-visibility: hidden;
-
-  border: none;
   font-family: inherit;
   font-size: inherit;
-  color: inherit;
   background: none;
   cursor: pointer;
   display: inline-block;
@@ -41,6 +41,7 @@ button.btn-outline-dark {
   font-weight: 700;
   outline: none;
   position: relative;
+  box-shadow: none;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
 }
@@ -62,7 +63,7 @@ button.btn-outline-dark {
 	height: 100%;
 	z-index: 0;
 	width: 0;
-	background: #51ad4c59;
+	background: #79797948;
 	-webkit-transition: none;
 	-moz-transition: none;
 	transition: none;
@@ -74,24 +75,39 @@ button.btn-outline-dark {
 	animation: prog-right 0.4s forwards;
 }
 
+.btn-outline-dark.embossed {
+  -webkit-transition: color .1s ease-in-out,background-color .1s ease-in-out;
+  transition: color .1s ease-in-out,background-color .1s ease-in-out;
+  -webkit-box-shadow: inset 0 1px 0 hsla(0,0%,100%,.0125), 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: inset 0 1px 0 hsla(0,0%,100%,.0125), 0 1px 1px rgba(0,0,0,.05);
+  border-top-width: .0625rem;
+  border-bottom-width: 0.2625rem;
+}
+
+.btn-outline-dark.embossed:active {
+  /* border-top-width: 0.2625rem;
+    border-bottom-width: .0625rem; */
+    background: #79797948;
+}
+
 @-webkit-keyframes prog-right {
 	to { 
     width: 100%;
-    opacity: 0%;
+    opacity: 0.3;
 	}
 }
 
 @-moz-keyframes prog-right {
 	to { 
     width: 100%;
-    opacity: 0%;
+    opacity: 0.3;
 	}
 }
 
 @keyframes prog-right {
 	to { 
     width: 100%;
-    opacity: 0%;
+    opacity: 0.3;
 	}
 }
 
@@ -113,4 +129,25 @@ button.btn-outline-dark {
 
 .card:hover {
   box-shadow: 0 0 32px 1px rgba(100, 100, 100, 0.15);
+}
+
+input[type] {
+  background: transparent;
+  border: 0;
+  box-shadow: none;
+  border-bottom: 1px solid rgba(0,0,0,.25);
+  border-radius: 0;
+  font-size: 2rem;
+  color: rgb(255, 255, 255);
+  font-weight: 300;
+  text-align: center;
+}
+
+input[type]:focus {
+  box-shadow: none;
+  border-bottom: 1px solid rgba(0,0,0,.45);
+}
+
+input[type]::placeholder {
+  color: rgb(212, 212, 212);
 }
