--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <div id="splash-img" class="hero fullscreen hero-img parallax-img">
       <div class="hero-body">
           <div class="content text-center">
-              <h1 class="uppercase white title"><%= title %></h1>
+              <h1 class="lowercase white title"><%= title %></h1>
               <input type="text" placeholder="Enter a keyword to begin" />
               <space></space>
               
