chore: Updated to FA 5 and added smooth scroll

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,18 +7,22 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/cirrus.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   </head>
   <body>
     <div id="splash-img" class="hero fullscreen hero-img parallax-img">
       <div class="hero-body">
           <div class="content text-center">
-              <h1 class="lowercase white title"><%= title %></h1>
+              <h1 class="uppercase white title"><%= title %></h1>
               <input type="text" placeholder="Enter a keyword to begin" />
               <space></space>
               
               <div class="btn-container">
-                  <button class="btn-outline-dark embossed center white">Random Keyword <i class="fa fa-chevron-right pad-right"></i></button>
-                  <button class="btn-outline-dark embossed center white">Generate <i class="fa fa-chevron-right pad-left"></i></button>
+                  <button class="btn-outline-dark embossed center white"><i class="fas fa-sync pad-right"></i> Random Keyword</button>
+                  <a href="#phraseContainer" class="smoothScroll">
+                    <button id="generateButton" class="btn-outline-dark embossed center white">Generate <i class="fa fa-chevron-right pad-left"></i></button>
+                  </a>
               </div>
           </div>
       </div>
@@ -26,14 +30,16 @@
 
     <space class="x-large"></space>
 
-    <div class="row text-center">
+    <div class="row text-center" id="phraseContainer">
       <h6>Generated pass phrase:</h4>
       <h5 class="light">Some pass phrase goes here.</h3>
       <p class="light">Ctrl + C to copy.</p>
     </div>
 
-    <script src='javascripts/app.js'></script>
-    <script src='javascripts/classie.js'></script>
-    <script src="https://use.fontawesome.com/a696b91557.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script async src='javascripts/app.js'></script>
+    <script async src='javascripts/classie.js'></script>
+    <script async src='javascripts/smoothscroll.js'></script>
+    <script async src="https://use.fontawesome.com/a696b91557.js"></script>
   </body>
 </html>
