--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
                         <div class="row">
                             <div class="col-6">
                                 <h3 class="light"><%= title %></h3>
-                                <h6 class="light">the snack that smiles back</h6>
+                                <h6 class="light">Passwords of the future.</h6>
                             </div>
                             
                             <div class="col-6">
@@ -29,7 +29,14 @@
                                     <input type="password" placeholder="Password">
                                 </div>
                                 <space></space>
-                                <button class="uppercase center phrase-btn btn-animated">Login</button>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <button class="uppercase center phrase-btn btn-animated google-plus">G+</button>
+                                    </div>
+                                    <div class="col-9">
+                                        <button class="uppercase center phrase-btn btn-animated">Login</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
