--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
 
     <head>
         <title><%= title %> - Login</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
