--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
               <space></space>
               
               <div class="btn-container">
+                  <button class="btn-outline-dark embossed center white">Number of Words: 5</button> <!-- TODO: Replace 5 with actual value from route file -->
                   <button class="btn-outline-dark embossed center white"><i class="fas fa-sync pad-right"></i> Random Keyword</button>
                   <a href="#phraseContainer" class="smoothScroll">
                     <button id="generateButton" class="btn-outline-dark embossed center white">Generate <i class="fa fa-chevron-right pad-left"></i></button>
@@ -33,8 +34,8 @@
 
     <div class="row text-center" id="phraseContainer">
       <h6>Generated pass phrase:</h4>
-      <h5 class="light">Some pass phrase goes here.</h3>
-      <p class="light">Ctrl + C to copy.</p>
+      <h5 id="passPhrase" class="light">Some pass phrase goes here.</h3>
+      <p class="light">Ctrl + C or Cmd + C to copy.</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
