--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,9 @@
                                 <space></space>
                                 <div class="row">
                                     <div class="col-3">
-                                        <button class="uppercase center phrase-btn btn-animated google-plus"><a style = "color:white" href = '/auth/google'>G+</a></button>
+                                        <a style = "display: block; padding: 0;" href = '/auth/google'>
+                                            <button class="uppercase center phrase-btn btn-animated google-plus">G+</button>
+                                        </a>
                                     </div>
                                     <div class="col-9">
                                         <button class="uppercase center phrase-btn btn-animated">Login</button>
