chore: Fixed up missing dependencies and added zxcvbn

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
             </div>
             <div class="modal-body">
                 <h6 class="light">Enter desired length for passphrase length.</h6>
-                <input id="phraseLenIn" type="number" value=3 min=3 />
+                <input id="phraseLenIn" type="number" value=3 min=3 max=20 />
             </div>
         </div>
     </div>
