feat(nav.ejs): Added partial for header

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -109,5 +109,6 @@
     <script async src='javascripts/tabs.js'></script>
     <script async src='javascripts/tab-loader.js'></script>
     <script async src="https://use.fontawesome.com/a696b91557.js"></script>
+    <script async src='javascripts/navbar.js'></script>
   </body>
 </html>
