--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,6 +46,7 @@
                 </div>
             </div>
         </div>
+        <script async src='javascripts/navbar.js'></script>
     </body>
 
 </html>
