--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
           <div class="content text-center">
               <h1 class="uppercase white title"><%= title %></h1>
               <% if(user){ %>
-              <h4> Welcome, <%= user.users[0]%>.</h4>
+              <h4> Welcome, <%= user.user %>.</h4>
               <% } %>
               <input id="phraseInput" type="text" placeholder="Enter a keyword to begin" />
               <space></space>
