feat(index.js): Working random word generator

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
                   <a href="#phraseLen">
                       <button id="phraseLenBtn" class="btn-outline-dark embossed center white">Number of Words: 3</button> <!-- TODO: Replace 5 with actual value from route file -->
                   </a>
-                  <button class="btn-outline-dark embossed center white"><i class="fas fa-sync pad-right"></i> Random Keyword</button>
+                  <button id="randomButton" class="btn-outline-dark embossed center white"><i class="fas fa-sync pad-right"></i> Random Keyword</button>
                   <a href="#phraseContainer" class="smoothScroll">
                     <button id="generateButton" class="btn-outline-dark embossed center white">Generate <i class="fa fa-chevron-right pad-left"></i></button>
                   </a>
