logout button functionality works

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,7 +16,7 @@
                 <a href="./dashboard">Dashboard</a>
             </div>
             <div class="nav-item" id="login">
-                <a href="#">Logout</a>
+                <a href="/auth/logout">Logout</a>
             </div>
         </div>
     </div>
