--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,7 +16,13 @@
                 <a href="./dashboard">Dashboard</a>
             </div>
             <div class="nav-item" id="login">
+                <% if(user){ %>
                 <a href="/auth/logout">Logout</a>
+                <% } else{ %>
+                <a href="/login">Login</a>
+                <% } %>
+
+
             </div>
         </div>
     </div>
