--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -25,7 +25,6 @@
         </div>
         
             <space class="x-large"></space>
-    
             <div class="tabpage shown">
                 <div class="hide-mobile">
                     <h3>Saved Pass Phrases</h3>
@@ -74,12 +73,13 @@
                         <div class="card-tile tile-center">
                             <div class="tile-icon">
                                 <figure class="avatar">
-                                    <img src="https://www.seoclerk.com/pics/319222-1IvI0s1421931178.png">
+                                    <img src=
+                                    <%= user.avatar %>>
                                 </figure>
                             </div>
                             <div class="tile-container">
-                                <h5 class="tile-title no-margin light">John Doe</h3>
-                                <h6 class="tile-subtitle no-margin light">23 pass phrases saved.</h6>
+                                <h5 class="tile-title no-margin light"><%=user.user%></h3>
+                                <h6 class="tile-subtitle no-margin light"><%=user.phrases.length%> phrases saved</h6>
                             </div>
                         </div>
 
@@ -89,19 +89,24 @@
                             <tbody>
                                 <tr>
                                     <th>Name</th>
-                                    <td>John Doe</td>
+                                    <td><%=user.user%></td>
                                 </tr>
                                 <tr>
                                     <th>Email</th>
-                                    <td>john.doe@gmail.com</td>
+                                    <td><%=user.email%></td>
                                 </tr>
                                 <tr>
                                     <th>Phrases Saved</th>
-                                    <td>42</td>
+                                    <td><%=user.phrases.length%></td>
                                 </tr>
                                 <tr>
                                     <th>Average Phrase Strength</th>
-                                    <td>9.9</td>
+                                    <td><% if(user.phrases.length == 0){ %>
+                                        0
+                                        <% } %>
+
+                                    
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
