feat(dashboard.ejs): Added nav bar

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,6 +12,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   </head>
   <body>
+    <% include ./partials/nav.ejs %>
     
     <space class="x-large"></space>
 
