--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,9 @@
 <div class="header header-fill unselectable header-fixed no-transition header-animated">
     <div class="header-brand">
         <div class="nav-item no-hover">
-            <h6 class="title">Phraze</h6>
+            <a href="./">
+                <h6 class="title">Phraze</h6>
+            </a>
         </div>
         <div class="nav-item nav-btn" id="header-btn">
             <span></span>
