feat(index.ejs): Started working on main site

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,6 +76,45 @@
                 </div>
             </div>
         </div>
+        <space class="x-large"></space>
+        <div class="content">
+            <div class="row">
+                <div class="col-4">
+                    <div class="card">
+                        <div class="text-center">
+                            <img src="./images/tree.png" />
+                            <h6>Saving Trees</h6>
+                            <p>Lorem Ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="text-center">
+                            <img src="./images/corgi.png" />
+                            <h6>Corgi Butts</h6>
+                            <p>Lorem Ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="text-center">
+                            <img src="./images/fidget.png" />
+                            <h6>Spin to Win</h6>
+                            <p>Lorem Ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hero">
+            <div class="hero-body">
+                <div class="content text-center">
+                    <h6>Harder to crack, easier to remember.</h6>
+                </div>
+            </div>
+        </div>
     <% } %>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
