--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,6 +73,7 @@
             <div class="hero-body">
                 <div class="content text-center">
                     <h6 class="white title">Welcome to <span class="uppercase"><h2 class="white"><%= title %></h2></span></h6>
+                    <h6 class="light white">A quick, memorable pass phrase generator.</h6>
                 </div>
             </div>
         </div>
@@ -108,10 +109,36 @@
                 </div>
             </div>
         </div>
-        <div class="hero">
+        <div class="hero" id="middleHero">
             <div class="hero-body">
-                <div class="content text-center">
-                    <h6>Harder to crack, easier to remember.</h6>
+                <div class="content text-center" style="margin-bottom: 0;">
+                    <h6 class="white">Harder to crack, easier to remember.</h6>
+                </div>
+            </div>
+        </div>
+        <space class="x-large"></space>
+        <div class="content">
+            <h4 class="text-center">How It Works</h4>
+            <space class="large"></space>
+            <div class="divider"></div>
+            <space class="large"></space>
+            
+            <div class="row">
+                <div class="work-card text-center">
+                    <h3>1.</h3>
+                    <p>Lorem Ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="work-card text-center">
+                    <h3>2.</h3>
+                    <p>Lorem Ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="work-card text-center">
+                    <h3>3.</h3>
+                    <p>Lorem Ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
                 </div>
             </div>
         </div>
