--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -21,7 +21,7 @@
                 <% if(user){ %>
                 <a href="/auth/logout">Logout</a>
                 <% } else{ %>
-                <a href="/login">Login</a>
+                <a href="/login">Login / Sign Up</a>
                 <% } %>
 
 
