--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,7 +137,7 @@
             <div class="row">
                 <div class="work-card text-center">
                     <h3>3.</h3>
-                    <p>Use your generated pass phrase for any website. Previously generated phrasese can be managed within the dashboard and are tied to you and only you.</p>
+                    <p>Use your generated pass phrase for any website. Previously generated phrases can be managed within the dashboard and are tied to you and only you.</p>
                 </div>
             </div>
         </div>
